forms-flow-web/src/styles.scss
/* ... */
.uploadButton {
  background-color: #425F9C;
  border: none;
  border-radius: 3px;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  height: 30px;
  margin-right: 15px;
  width: auto;
  padding: 0 20px;
  box-sizing: content-box;
}

.fileName {
  font-family: Arial;
  font-size: 14px;
}

.upload+.uploadButton {
  height: 38px;
}

.searchInvalid {
  border-color: #ff2727 !important;
  background-color: rgb(255, 255, 255);
}

.validation-err {
  color: red;
  margin-left: 52px;
  font-size: 13px;
}

.input-group {
  width: 30rem;
  background-color: #ffff;
}

.sort-icons {
  display: flex;
  flex-direction: column;
}

.sort-cell{
  display: flex;
  gap: 1rem;
}

.table-header{
  background-color: #F2F2F2;
}

.input-group-text :hover{
  cursor: pointer;
  color: #4D61FC;
 }
 
.wrap-text{
  word-wrap: break-word;
  max-width: 60vw;
}

